--- a/admin/mall-admin-dev.yml
+++ b/admin/mall-admin-dev.yml
@@ -13,3 +13,5 @@ spring:
         login-username: druid
         login-password: druid
     driver-class-name: com.mysql.jdbc.Driver
+server:
+  port:8080
